@@ -1,8 +1,10 @@
 package ua.edu.znu.flappybirdgame;
 
-import java.util.*;
-import java.awt.*;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Random;
+import java.awt.Graphics;
 
 /**
  * Клас {@code PipeManager} відповідає за керування трубами у грі Flappy Bird.
@@ -12,6 +14,51 @@ public class PipeManager {
      * Максимальна кількість труб на екрані.
      */
     private static final int MAX_PIPES = 6;
+
+    /**
+     * Початкова кількість труб при старті гри.
+     */
+    private static final int INITIAL_PIPES = 4;
+
+    /**
+     * Швидкість руху труб (пікселів за такт).
+     */
+    private static final int PIPE_SPEED = 10;
+
+    /**
+     * Мінімальна висота труби.
+     */
+    private static final int MIN_PIPE_HEIGHT = 50;
+
+    /**
+     * Максимальна додаткова висота труби (рандом).
+     */
+    private static final int PIPE_HEIGHT_VAR = 300;
+
+    /**
+     * Ширина труби.
+     */
+    private static final int PIPE_WIDTH = 100;
+
+    /**
+     * Відстань між верхньою та нижньою трубою (зазор).
+     */
+    private static final int PIPE_GAP = 300;
+
+    /**
+     * Висота землі.
+     */
+    private static final int GROUND_HEIGHT = 120;
+
+    /**
+     * Відстань між трубами при старті.
+     */
+    private static final int START_DISTANCE = 300;
+
+    /**
+     * Відстань між трубами під час гри.
+     */
+    private static final int GAME_DISTANCE = 600;
 
     /**
      * Список активних труб.
@@ -50,7 +97,7 @@ public class PipeManager {
      */
     public void reset() {
         pipeInstances.clear();
-        for (int i = 0; i < 4; i++) {
+        for (int i = 0; i < INITIAL_PIPES; i++) {
             addPipe(true);
         }
     }
@@ -59,7 +106,7 @@ public class PipeManager {
      * Оновлює стан труб.
      */
     public void update() {
-        pipeInstances.forEach(pipeInstance -> pipeInstance.move(10));
+        pipeInstances.forEach(pipeInstance -> pipeInstance.move(PIPE_SPEED));
         pipeInstances.removeIf(pipeInstance ->
                 pipeInstance.getX() + pipeInstance.getWidth() < 0);
 
@@ -75,18 +122,25 @@ public class PipeManager {
      *              якщо {@code false}, труби додаються після останньої труби
      */
     private void addPipe(final boolean start) {
-        final int pipeHeight = 50 + random.nextInt(300);
-        final int pipeWidth = 100;
-        final int pipeGap = 300;
-        final int groundHeight = 120;
-        final int distance = start ? 300 : 600;
+        final int pipeHeight = MIN_PIPE_HEIGHT
+                + random.nextInt(PIPE_HEIGHT_VAR);
+        final int distance = start ? START_DISTANCE : GAME_DISTANCE;
 
-        final int xPos = start ? gameWidth + pipeWidth + pipeInstances.size() * distance
-                : pipeInstances.getLast().getX() + distance;
+        final int xPos = start
+                ? gameWidth + PIPE_WIDTH + pipeInstances.size() * distance
+                : pipeInstances.get(pipeInstances.size() - 1).getX() + distance;
 
+        pipeInstances.add(new PipeInstance(
+                xPos,
+                gameHeight - pipeHeight - GROUND_HEIGHT,
+                PIPE_WIDTH,
+                pipeHeight));
 
-        pipeInstances.add(new PipeInstance(xPos, gameHeight - pipeHeight - groundHeight, pipeWidth, pipeHeight));
-        pipeInstances.add(new PipeInstance(xPos, 0, pipeWidth, gameHeight - pipeHeight - pipeGap));
+        pipeInstances.add(new PipeInstance(
+                xPos,
+                0,
+                PIPE_WIDTH,
+                gameHeight - pipeHeight - PIPE_GAP));
     }
 
     /**
